2002-06-14  Jody Goldberg <jody@gnome.org>

	* applix-read.c (applix_read_cells) : be more expressive and lenient
	  when dealing with parse errors.
	(applix_get_line) : handle the 8bit character encoding.  TODO : add
	  the 16 bit when we figure out what encoding all of this lives in.
	(applix_get_sheet) : Flag the need to recompute spans.

2002-06-14  Jody Goldberg <jody@gnome.org>

	* applix-read.c : convert to gsf input and restructure quite a bit to
	  be more flexible, add support for applix-5, and support
	  hidden/locked formats.

2002-06-13  Jody Goldberg <jody@gnome.org>

	* boot.c : convert to libgsf.

2002-05-29  Jody Goldberg <jody@gnome.org>

	* Release 1.1.4

2002-04-29  Jody Goldberg <jody@gnome.org>

	* Release 1.1.3

2002-03-25  Jody Goldberg <jody@gnome.org>

	* Release 1.1.2

2002-03-10  Jody Goldberg <jody@gnome.org>

	* Release 1.1.1

2002-02-22  Jon K Hellan  <hellan@acm.org>

	* applix-write.c (applix_save): Rename to applix_write.

2002-02-21  Morten Welinder <terra@diku.dk>

	* applix-read.c (applix_parse_style): Constify.

2002-02-18  Jody Goldberg <jody@gnome.org>

	* Release 1.1.0

2002-02-10  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=70327
	* applix-read.c (applix_parse_style) : Looks like the font indicies
	  are 0 based.
	(applix_parse_error) : Make this vararg and generate decent errors.

2002-02-05  Jon K Hellan  <hellan@acm.org>

	* applix-read.c (applix_read_colormap): Use style_color_new_i8.

2002-01-21  Jody Goldberg <jody@gnome.org>

	* Release 1.0.3

2002-01-15  Jody Goldberg <jody@gnome.org>

	* Release 1.0.2

2002-01-10  Jody Goldberg <jody@gnome.org>

	* applix-read.c (applix_parse_style) : add new date format

2002-01-06  Jody Goldberg <jody@gnome.org>

	* Release 1.0.1

2001-12-31  Jody Goldberg <jody@gnome.org>

	* applix-read.c (applix_get_precision) : doh!

2001-12-31  Jody Goldberg <jody@gnome.org>

	* Release 1.0.0

2001-12-24  Jody Goldberg <jody@gnome.org>

	* Release 0.99.1
